<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.mypage.PwdChangeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_title_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd_change"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd_before"
            android:textColor="#707070"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_before_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_input_r4"
            android:hint="@string/pwd_before_hint"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="#B9B9B9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/pwd_new"
            android:textColor="#707070"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_input_r4"
            android:hint="@string/pwd_new_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="#B9B9B9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pwd_rule"
            android:textColor="#B9B9B9"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pwd_new_check"
            android:textColor="#707070"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_new_pwd_check"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_input_r4"
            android:hint="@string/pwd_new_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="#B9B9B9" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_result"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_009fde_r4"
        android:stateListAnimator="@null"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>